[package]
name = "zort-judge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "macros",
    "chrono"
] }
warp = { version = "0.4.2", features = ["server"] }
serde = "1.0.228"
thiserror = "2.0.18"
argon2 = "0.5.3"
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
